--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -50,11 +50,13 @@ jobs:
           NEW_VERSION=$(./.github/workflow_scripts/increment-version.sh -t ${{ inputs.version }} -f VERSION)
           echo "$NEW_VERSION" > ./VERSION
 
+          npm run test
           npm run bundle
 
           git checkout -b release/"$NEW_VERSION"
 
-          git add VERSION ./dist/*
+          git add VERSION ./dist/* ./badges/*
+
           git commit -m "Release action version $NEW_VERSION"
 
           git push --set-upstream origin release/$NEW_VERSION
