fzxing the action test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
         id: test-action
         uses: ./
         with:
+          host_url: localhost
           operation: 'test'
 
       - name: Print Output
