--- a/action.yml
+++ b/action.yml
@@ -1,84 +1,64 @@
-name: "Simple Badge Generator"
-description: "Serverless generation of simple badges"
-author: "Carlos Lapao"
+name: "Parallels Desktop DevOps Actions"
+description: "GitHub Action to run Parallels Desktop VMs in your CI/CD pipeline"
+author: "Parallels Desktop"
 branding:
   icon: "maximize"
   color: "blue"
 
 inputs:
-  badge-type:
-    description: "The type of badge to generate, you can choose between simple, boolean, semaphore and cobertura"
-    required: false
-    default: "simple"
-  badge-theme:
-    description: "The theme of the badge, you can choose between flat, plastic"
-    required: false
-    default: "plastic"
-  title:
-    description: "The title of the badge"
+  operation:
+    description: "The operation to perform"
     required: true
-  title-fill-color:
-    description: "The fill color of the title"
+    default: "pull"
+  username:
+    description: "The username to use to connect to the devops api service"
     required: false
-  title-font-color:
-    description: "The font color of the title"
+  password:
+    description: "The password to use to connect to the devops api service"
     required: false
-  value:
-    description: "The value of the badge"
+  api-key:
+    description: "The api key to use to connect to the devops api service"
     required: false
-  value-fill-color:
-    description: "The fill color of the coverage value, if left empty it will be automatically calculated"
+  api-secret:
+    description: "The api secret to use to connect to the devops api service"
     required: false
-  value-font-color:
-    description: "The font color of the coverage value, if left empty it will be automatically calculated"
+  orchestrator_url:
+    description: "The orchestrator url where we are connecting to"
     required: false
-  badge-path:
-    description: "Where to save the generated badge"
+  host_url:
+    description: "The host url where we are connecting to"
     required: false
-    default: "./badges/cobertura.svg"
-  badge-icon:
-    description: "The icon to use in the badge, the available icons are: none, github, discord"
+  insecure:
+    description: "Whether to use ssl or not"
     required: false
-  cobertura-path:
-    description: "The path to the Cobertura XML file"
+    default: "false"
+  base_vm:
+    description: "The name of the base virtual machine to use on clone operations"
     required: false
-  cobertura-color-yellow-threshold:
-    description: "The threshold for the yellow color in cobertura percentage"
+  machine_name:
+    description: "The name of the virtual machine to use on clone, start, stop, delete operations"
     required: false
-    default: "40"
-  cobertura-color-green-threshold:
-    description: "The threshold for the green color in cobertura percentage"
+  base_image:
+    description: "The name of the base image to use when creating a new virtual machine from the catalog"
     required: false
-    default: "80"
-  semaphore-red-value:
-    description: "The value for displaying red in semaphore"
+  machine_cpu_count:
+    description: "The number of cpus to use when creating a new virtual machine from the catalog"
     required: false
-  semaphore-red-color:
-    description: "The color for displaying red in semaphore, if none is provided it will be automatically calculated"
+  machine_memory_size:
+    description: "The amount of memory to use when creating a new virtual machine from the catalog"
     required: false
-  semaphore-yellow-value:
-    description: "The value for displaying yellow in semaphore"
-    required: false
-  semaphore-yellow-color:
-    description: "The color for displaying yellow in semaphore, if none is provided it will be automatically calculated"
-    required: false
-  semaphore-green-value:
-    description: "The value for displaying green in semaphore"
-    required: false
-  semaphore-green-color:
-    description: "The color for displaying green in semaphore, if none is provided it will be automatically calculated"
-    required: false
-  boolean-true-color:
-    description: "The color for displaying red in boolean, if none is provided it will be automatically calculated"
-    required: false
-  boolean-false-color:
-    description: "The color for displaying green in boolean, if none is provided it will be automatically calculated"
+  run:
+    description: "The run command to execute on the virtual machine"
     required: false
 
 # Define your outputs here.
 outputs:
-  badge-path:
-    description: "The path to the generated badge"
+  vm_id:
+    description: "The id of the virtual machine"
+  vm_name:
+    description: "The name of the virtual machine"
+  host:
+    description: "The host of the virtual machine"
 
 runs:
   using: node20
