--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "simple-badge-generator-action",
-    "description": "Serverless generation of Cobertura coverage badges",
-    "version": "0.0.1",
+    "name": "parallels-desktop-devops-action",
+    "description": "GitHub Action to run Parallels Desktop VMs in your CI/CD pipeline",
+    "version": "0.0.0",
     "author": "Carlos Lapao",
     "private": true,
     "homepage": "https://github.com/cjlapao/cobertura-xml-badge-generator#readme",
