--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -46,3 +46,4 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_JSCPD: false
           VALIDATE_CHECKOV: false
+          VALIDATE_GITHUB_ACTIONS: false
