--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "format:write": "prettier --write **/*.ts",
         "format:check": "prettier --check **/*.ts",
         "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
+        "super-linter": "",
         "package": "ncc build src/index.ts --license licenses.txt",
         "package:watch": "npm run package -- --watch",
         "test": "(jest && make-coverage-badge --output-path ./badges/coverage.svg) || make-coverage-badge --output-path ./badges/coverage.svg",
