--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "super-linter": "",
         "package": "ncc build src/index.ts --license licenses.txt",
         "package:watch": "npm run package -- --watch",
+        "lint:standard": "ts-standard --parser @typescript-eslint/parser --plugin @typescript-eslint/eslint-plugin --project tsconfig.eslint.json",
         "test": "(jest && make-coverage-badge --output-path ./badges/coverage.svg) || make-coverage-badge --output-path ./badges/coverage.svg",
         "all": "npm run format:write && npm run lint && npm run test && npm run package"
     },
