--- a/.github/linters/.eslintrc.yml
+++ b/.github/linters/.eslintrc.yml
@@ -41,16 +41,18 @@ extends:
   - plugin:@typescript-eslint/recommended
 
 rules:
-  "camelcase": "off"
-  "eslint-comments/no-use": "off"
-  "eslint-comments/no-unused-disable": "off"
-  "i18n-text/no-en": "off"
-  "import/no-commonjs": "off"
-  "import/no-namespace": "off"
-  "no-console": "off"
-  "no-unused-vars": "off"
-  "prettier/prettier": "error"
-  "semi": "off"
-  "@typescript-eslint/space-before-function-paren": "off"
-  "no-shadow": "off"
-  "@typescript-eslint/restrict-template-expressions": "off"
+  {
+    "camelcase": "off",
+    "eslint-comments/no-use": "off",
+    "eslint-comments/no-unused-disable": "off",
+    "i18n-text/no-en": "off",
+    "import/no-commonjs": "off",
+    "import/no-namespace": "off",
+    "no-console": "off",
+    "no-unused-vars": "off",
+    "prettier/prettier": "error",
+    "semi": "off",
+    "@typescript-eslint/space-before-function-paren": "off",
+    "no-shadow": "off",
+    "@typescript-eslint/restrict-template-expressions": "off",
+  }
