--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -47,4 +47,4 @@ jobs:
           VALIDATE_JSCPD: false
           VALIDATE_CHECKOV: false
           VALIDATE_GITHUB_ACTIONS: false
-          VALIDATE_TYPESCRIPT_STANDARD: false
+          VALIDATE_TYPESCRIPT_PRETTIER: true
