--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "NodeNext",
-    "rootDir": "./",
+    "rootDir": "./src",
     "moduleResolution": "NodeNext",
     "baseUrl": "./",
     "sourceMap": true,
