fix the execution of the transpile from the dependabot

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,6 +13,7 @@ permissions:
 
 jobs:
   lint:
+    if: github.event_name == 'pull_request' && github.actor != 'dependabot[bot]'
     name: Lint Codebase
     runs-on: ubuntu-latest
 
