--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -40,6 +40,7 @@ jobs:
       - name: Build bundle
         run: |
           echo $AMPLITUDE_API_KEY
+          cat ./src/telemetry/telemetry.ts
           npm run bundle
         env:
           NODE_ENV: production
