--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -51,4 +51,5 @@ jobs:
           VALIDATE_TYPESCRIPT_STANDARD: false
           VALIDATE_JSON: false
           VALIDATE_TYPESCRIPT_ES: false
-          VALIDATE_BIOME: false
+          BIOME_FORMAT: false
+          BIOME_LINT: false
