--- a/package.json
+++ b/package.json
@@ -111,5 +111,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "uglify-js": "^3.19.3"
+  },
+  "overrides": {
+    "diff": "8.0.3",
+    "undici": "7.18.2"
   }
 }
