fixed build issues

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -53,3 +53,4 @@ jobs:
           VALIDATE_TYPESCRIPT_ES: false
           VALIDATE_BIOME_FORMAT: false
           VALIDATE_BIOME_LINT: false
+          VALIDATE_SPELL_CODESPELL: false
